<resources>
    <string name="app_name">MoCook</string>
    <string name="logo_description">Logo of the app</string>
    <string name="welcome_text">Welcome to</string>
    <string name="mocook">MoCook</string>
    <string name="welcome_login">Hello there, Welcome Back</string>
    <string name="sign_in_login">Sign in to continue</string>
    <string name="username_input_placeholder">Username</string>
    <string name="password_input_placeholder">Password</string>
    <string name="log_in_button">LOG IN</string>
    <string name="sign_up_login">NEW USER? SIGN UP</string>
    <string name="welcome_register">Welcome to MoCook</string>
    <string name="explanation_register">Sign up to start experimenting with Mocook</string>
    <string name="name_input_placeholder">Full Name</string>
    <string name="email_input_placeholder">Email</string>
    <string name="verify_password_input_placeholder">Verify password</string>
    <string name="register_button">SIGN UP</string>
    <string name="cancel_button">CANCEL</string>
    <string name="field_empty">Field cannot be empty</string>
    <string name="white_spaces">White spaces are not allowed</string>
    <string name="incorrect_password">Incorrect password format (Min. 1 capital letter, 1 lower case, 1 number and 8 characters)</string>
    <string name="password_match">Password do not match</string>
    <string name="transition_image">loader_image</string>
    <string name="transition_text">loader_text</string>
    <string name="invalid_email">Invalid email format</string>
    <string name="notification_channel_name">Informative Notifications</string>
    <string name="notification_channel_description">Notifications related to informative aspects like the creation of a recipe or the register of a user</string>
    <string name="register_notification_title">User created correctly!</string>
    <string name="register_notification_text">Registered correctly in the app, access MoCook to start this new adventure</string>
    <string name="menu_home_label">Home</string>
    <string name="menu_list_label">My List</string>
    <string name="menu_user_label">User</string>
    <string name="search_text">Search for a recipe</string>
    <string name="back_icon_description">Back icon</string>
    <string name="create_recipe_title">Create Recipe</string>
    <string name="recipe_name_input_placeholder">Name recipe</string>
    <string name="title_dialog_image">Choose source for the image</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_gallery">Choose from Gallery</string>
    <string name="load_url">Load picture from URL</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_message">There was an error obtaining the image</string>
    <string name="url_dialog_title">Obtaining image from URL</string>
    <string name="url_dialog_message">Introduce the URL of the picture you want to add:</string>
    <string name="url_input_hint">URL</string>
    <string name="url_dialog_add">Add</string>
    <string name="error_dialog_url">Error trying to retrieve the image, check the URL is correct</string>
    <string name="account_tab_text">Account</string>
    <string name="recipes_tab_text">Created recipes</string>
    <string name="user_profile">User Profile</string>
    <string name="adding_recipe_description">Adding recipe</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="category">Category</string>
    <string name="country_origin">Country of origin</string>
    <string name="update_account">Update account</string>
    <string name="delete_account">Delete account</string>
    <string name="deleting_user_title">Deleting User</string>
    <string name="deleting_user_text">Are you sure you want to delete the user?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="username_used">Username already in use</string>
    <string name="email_used">Email already in use</string>
    <string name="deleting_recipe_title">Deleting Recipe</string>
    <string name="deleting_recipe_text">Are you sure you want to delete the recipe?</string>
    <string name="edit_recipe_title">Edit Recipe</string>
    <string name="share_text">Enter to MoCook to see the recipe: </string>
    <string name="no_recipes_list_liked">You haven\'t added any recipes to your list yet</string>
    <string name="no_recipes_list_created">You haven\'t created any recipes yet</string>
    <string name="no_recipes_available">No recipes available</string>
    <string name="recipe_image_description">Recipe image</string>
    <string name="share_recipe">Share recipe</string>
    <string name="like_recipe">Like of the recipe</string>
    <string name="country">Country</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="white_background">White background</string>
    <string name="meat">Meat</string>
    <string name="fish">Fish</string>
    <string name="desserts">Desserts</string>
    <string name="salads">Salads</string>
    <string name="soups">Soups</string>
    <string name="breads">Breads</string>
    <string name="breakfast">Breakfast</string>
    <string name="vegetables">Vegetables</string>
    <string name="beverages">Beverages</string>
    <string name="or">- OR -</string>
    <string name="sign_in">SIGN IN</string>
    <string name="google_account_text_title">Account managed by Google</string>
    <string name="google_account_text">For editing the profile, access to your Google Account.</string>
</resources>
